fix bug on firefox

--- a/src/components/gallery/gallery.less
+++ b/src/components/gallery/gallery.less
@@ -21,7 +21,7 @@
     }
 
     @media (min-width: @breakpoint-tablet),(orientation: portrait) {
-        display: initial;
+        display: flex;
     }
 
     &_border {
